--- a/wasipage.html
+++ b/wasipage.html
@@ -78,12 +78,12 @@
 
   <button onclick="window.open(`/wasiqr`)" class="btn">QR Code</button>
   <button onclick="window.open(`/pair`)" class="btn">Pair Code</button>
-  <button onclick="window.open(`https://github.com/Chimbiko-xd/CHRISSPARK-XMD`)" class="btn">Bot Repo</button>
-  <button onclick="window.open(`https://github.com/Chimbiko-xd`)" class="btn">Plugins</button>
+  <button onclick="window.open(`https://github.com/Xchristech/CHRISSPARK-XMD`)" class="btn">Bot Repo</button>
+  <button onclick="window.open(`https://github.com/Xchristech`)" class="btn">Plugins</button>
   <button onclick="window.open(`https://wa.me/2348069675806`)" class="btn">Contact Me</button>
   <button onclick="window.open(`https://chat.whatsapp.com/HxyBOQYd4kF6q0vzKXeW3w`)" class="btn">Wa Group</button>
   <button onclick="window.open(`https://whatsapp.com/channel/0029Vb5qc6N2Jl8E3EcVBv0t`)" class="btn">Wa Channel</button>
-  <button onclick="window.open(`https://www.youtube.com/@ChrisSpark-XMD`)" class="btn">Youtube</button>
+  <button onclick="window.open(`https://www.youtube.com/@Xchristech`)" class="btn">Youtube</button>
   
 
 </body>
